--- a/99_aqua 7.17 ゴキブリ退治(課題)/game/game.vcxproj
+++ b/99_aqua 7.17 ゴキブリ退治(課題)/game/game.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="src\game\game_object\data_manager\data_manager.cpp" />
     <ClCompile Include="src\game\game_object\effect_manager\effect\dead_effect\dead_effect.cpp" />
     <ClCompile Include="src\game\game_object\effect_manager\effect\effect.cpp" />
+    <ClCompile Include="src\game\game_object\effect_manager\effect\Ehit_effect\ehit_effect.cpp" />
     <ClCompile Include="src\game\game_object\effect_manager\effect\hit_effect\hit_effect.cpp" />
     <ClCompile Include="src\game\game_object\effect_manager\effect_manager.cpp" />
     <ClCompile Include="src\game\game_object\goki_manager\goki\goki.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="src\game\game_object\effect_manager\effect\dead_effect\dead_effect.h" />
     <ClInclude Include="src\game\game_object\effect_manager\effect\effect.h" />
     <ClInclude Include="src\game\game_object\effect_manager\effect\effect_id.h" />
+    <ClInclude Include="src\game\game_object\effect_manager\effect\Ehit_effect\ehit_effect.h" />
     <ClInclude Include="src\game\game_object\effect_manager\effect\hit_effect\hit_effect.h" />
     <ClInclude Include="src\game\game_object\effect_manager\effect_manager.h" />
     <ClInclude Include="src\game\game_object\game_object.h" />
